fix: ui shift on upload image hover

--- a/sdks/js/packages/core/react/components/avatar-upload/avatar-upload.module.css
+++ b/sdks/js/packages/core/react/components/avatar-upload/avatar-upload.module.css
@@ -10,6 +10,7 @@
   display: flex;
   width: 80px;
   height: 80px;
+  box-sizing: border-box;
   gap: var(--rs-space-5);
   justify-content: center;
   align-items: center;
